9.0/README.md
<p align="center"><img src="https://raw.githubusercontent.com/JujuAdams/SNAP/master/LOGO.png" style="display:block; margin:auto; width:300px"></p>
<h1 align="center">SNAP 9.0</h1>

<p align="center">Data format converters for GameMaker LTS 2026 by Juju Adams</p>

<p align="center"><a href="https://github.com/JujuAdams/SNAP/releases/">Download the .yymps</a></p>

&nbsp;

**What platforms does SNAP support?**

Everything apart from HTML5! I've not tested outside of Windows but SNAP relies exclusively on native GameMaker functions so whatever GameMaker supports SNAP should too. You might run into edge cases on other platforms; please [report any bugs](https://github.com/JujuAdams/SNAP/issues) if and when you find them.

&nbsp;

## Does this library support GMRT / "new runtime"?

No, GMRT is not supported by this library.

&nbsp;

**How is SNAP licensed? Can I use it for commercial projects?**

[SNAP is released under the MIT license](https://github.com/JujuAdams/SNAP/blob/main/LICENSE). This means you can use it for whatever purpose you want, including commercial projects. It'd mean a lot to me if you'd drop my name in the credits (Juju Adams) and/or say thanks, but you're under no obligation to do so.

&nbsp;

**I think you're missing a data format and I'd like you to implement it!**

Great! Please make a [feature request](https://github.com/JujuAdams/SNAP/issues). Feature requests make SNAP a more fun tool to use and gives me something to think about when I'm bored on public transport.

&nbsp;

**I found a bug, and it both scares and mildly annoys me. What is the best way to get the problem solved?**

Please make a [bug report](https://github.com/JujuAdams/SNAP/issues). I check GitHub every day and bug fixes usually go out a couple days after that.

&nbsp;

**Who made SNAP?**

SNAP is built and maintained by [Juju](https://www.jujuadams.com/) who has been working in games for many years. Juju's worked on a lot of [commercial GameMaker games](http://www.jujuadams.com/) in that time and has written, and rewritten, data format converters many times.

&nbsp;

**Has AI been used to make this library?**

This library was made with human hands. No generative AI models have been used to make this library.

&nbsp;

**Can I send you donations? Are you going to start a Patreon?**

Thank you for wanting to show your appreciation - it really does mean a lot to me personally - but I'm fortunate enough to have a stable income from gamedev. I'm not looking to join Patreon as a creator at this moment in time. If you'd like to support my work then drop me a credit in your game and/or give a shout-out on the social media platform of your choice.

&nbsp; 

**How do I credit you in my game?**

You may credit me as "Juju Adams" or "JUJU ADAMS", whichever is most appropriate for your game, in any Latin font. My MobyGames account is [here](https://www.mobygames.com/person/918360/). You may **not** use my social media avatar (from Discord or other social media) for any purpose and you should only use my name for a credit.
